--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 
   <input type="file" alt="image" (change)="handleChange($event)">
   <button (click)="goTest()">Получить пиксели</button>
-  <canvas id="pixelart" #canvasElement></canvas>
+  <canvas #canvasElementFrom></canvas>
+  <canvas #canvasElementTo></canvas>
 </header>
