--- a/src/app/components/checkbox/checkbox.component.styl
+++ b/src/app/components/checkbox/checkbox.component.styl
@@ -17,7 +17,7 @@
     width 0
     &:checked
       & ~ .checkmark
-        background-color #2196F3
+        background-color #42B6FB
         &:after
           display block
   .checkmark
