--- a/src/app/components/button/button.component.styl
+++ b/src/app/components/button/button.component.styl
@@ -1,7 +1,7 @@
 .ui-button
   button
     display: flex
-    width 160px
+    min-width: 40px
     font-family IBM Plex Sans
     font-style normal
     font-weight 500
