--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,28 @@
 <header>
-  <input type="file" alt="image" (change)="handleChange($event)">
+  <input type="file" alt="image" (change)="handleChange($event)" />
   <app-button (click)="goTest()">Конвертировать</app-button>
-  <app-checkbox [(value)]="isGrayScale">Grayscale</app-checkbox>
-  <app-checkbox [(value)]="isSpaced">Spaced</app-checkbox>
-  <app-checkbox [(value)]="minecraft">minecraft on</app-checkbox>
+  <app-checkbox [(value)]="isGrayScale" (valueChange)="goTest()">Grayscale</app-checkbox>
+  <app-checkbox [(value)]="isSpaced" (valueChange)="goTest()">Spaced</app-checkbox>
+  <app-checkbox [(value)]="minecraft" (valueChange)="goTest()">minecraft on</app-checkbox>
   <div style="display: flex; font-size: 18px; align-items: center; justify-content: space-between; width: 180px">
     Scale
-    <app-incrementer [(value)]="this.scale" [step]="0.1" [maxValue]="1" [minValue]="0.1"></app-incrementer>
+    <app-incrementer
+      [(value)]="this.scale"
+      [step]="0.1"
+      [maxValue]="1"
+      [minValue]="0.1"
+      (valueChange)="goTest()"
+    ></app-incrementer>
   </div>
   <div style="display: flex; font-size: 18px; align-items: center; justify-content: space-between; width: 180px">
     resultPixel
-    <app-incrementer [(value)]="this.resultPixelSize" [step]="2" [maxValue]="40" [minValue]="4"></app-incrementer>
+    <app-incrementer
+      [(value)]="this.resultPixelSize"
+      [step]="2"
+      [maxValue]="40"
+      [minValue]="4"
+      (valueChange)="goTest()"
+    ></app-incrementer>
   </div>
   <canvas #canvasElementFrom></canvas>
   <canvas #canvasElementTo></canvas>
