--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face
+  font-family Pixel
+  font-style normal
+  src url(assets/fonts/BULKYPIX.ttf)
