--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -8,3 +8,22 @@ header
 
   app-button
     display: inline-block
+
+  .incrementer-block
+    display: inline-block
+    background: #FF9D0A
+    border: 3px solid #000000
+    height: 41px
+    margin-bottom: 15px;
+
+  .incrementer-block__content
+    display: flex
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 15px
+
+  .incrementer-block__text
+    padding: 0
+    margin: 0 15px 0 0
+    font-size: 18px
