--- a/src/app/components/incrementer/incrementer.component.styl
+++ b/src/app/components/incrementer/incrementer.component.styl
@@ -1,6 +1,9 @@
 .ui-incrementer
   display: flex
-  width: 120px
-  justify-content space-between
+  justify-content: center
   align-items: center
+
+.ui-incrementer__value
+  padding: 0
+  margin: 0 8px 0 8px
   font-size: 18px
