--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="incrementer-block">
     <app-incrementer
       [(value)]="this.scale"
-      [textLabel]='"Scale"'
+      [label]='"Scale"'
       [step]="0.1"
       [maxValue]="1"
       [minValue]="0.1"
@@ -17,7 +17,7 @@
   <div class="incrementer-block">
     <app-incrementer
       [(value)]="this.resultPixelSize"
-      [textLabel]='"resultPixel"'
+      [label]='"resultPixel"'
       [step]="2"
       [maxValue]="40"
       [minValue]="4"
