--- a/src/app/components/incrementer/incrementer.component.html
+++ b/src/app/components/incrementer/incrementer.component.html
@@ -1,5 +1,5 @@
 <div class="ui-incrementer">
-  <p class="ui-incrementer__label">{{textLabel}}</p>
+  <p class="ui-incrementer__label">{{label}}</p>
   <div (click)="desc()" class="ui-incrementer__block ui-incrementer__block--grey">
     <svg width="15" height="14" viewBox="0 0 20 20" xml:space="preserve"><g><rect y="8" width="20" height="5"/></g></svg>
   </div>
