change style for button

--- a/src/app/components/button/button.component.styl
+++ b/src/app/components/button/button.component.styl
@@ -1,26 +1,8 @@
 .ui-button
   button
-    display: flex
-    min-width: 40px
-    font-family IBM Plex Sans
-    font-style normal
-    font-weight 500
-    border none
-    justify-content center
-    align-items center
-    outline none
-    border-radius: 10px;
-    font-size: 16px
-    height: 32px
-
-    &.primary
-      background #42B6FB
-      color #FFFFFF
-
-      &:active
-        background #3BA4E2
-
-      &.disabled
-        background #DFDFDF
-        color #FFFFFF
-        pointer-events none
+    font-family Pixel
+    background: #FF9D0A;
+    border: 3px solid #000000;
+    box-sizing: border-box;
+    padding: 13px 10px;
+    cursor: pointer;
