feat: added some final styles

--- a/src/app/components/checkbox/checkbox.component.html
+++ b/src/app/components/checkbox/checkbox.component.html
@@ -2,46 +2,27 @@
   <ng-content></ng-content>
   <input type="checkbox" [checked]="value" (change)="onCheckboxChange($event)" />
   <span class="checkmark">
-    <svg class="mark" version="1.1" x="0px" y="0px" viewBox="0 0 512 512" width="14" height="14">
-      <g>
-        <g>
-          <path
-            d="M193.085,357.966h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271 c5.99,0,10.847-4.857,10.847-10.847v-80.271C203.932,362.824,199.075,357.966,193.085,357.966z"
-          />
-        </g>
-      </g>
-      <g>
-        <g>
-          <path
-            d="M91.119,256H10.847C4.857,256,0,260.857,0,266.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
-			c5.99,0,10.847-4.857,10.847-10.847v-80.271C101.966,260.857,97.109,256,91.119,256z"
-          />
-        </g>
-      </g>
-      <g>
-        <g>
-          <path
-            d="M295.051,256H214.78c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
+    <svg class="mark" x="0px" y="0px" viewBox="0 0 512 512" width="18" height="18">
+      <path
+        d="M193.085,357.966h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
+        c5.99,0,10.847-4.857,10.847-10.847v-80.271C203.932,362.824,199.075,357.966,193.085,357.966z"
+      />
+      <path
+        d="M91.119,256H10.847C4.857,256,0,260.857,0,266.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
+    c5.99,0,10.847-4.857,10.847-10.847v-80.271C101.966,260.857,97.109,256,91.119,256z"
+      />
+      <path
+        d="M295.051,256H214.78c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
 			c5.99,0,10.847-4.857,10.847-10.847v-80.271C305.898,260.857,301.041,256,295.051,256z"
-          />
-        </g>
-      </g>
-      <g>
-        <g>
-          <path
-            d="M399.186,154.034h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
+      />
+      <path
+        d="M399.186,154.034h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
 			c5.99,0,10.847-4.857,10.847-10.847v-80.271C410.034,158.891,405.176,154.034,399.186,154.034z"
-          />
-        </g>
-      </g>
-      <g>
-        <g>
-          <path
-            d="M501.153,52.068h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
+      />
+      <path
+        d="M501.153,52.068h-80.271c-5.99,0-10.847,4.857-10.847,10.847v80.271c0,5.99,4.857,10.847,10.847,10.847h80.271
 			c5.99,0,10.847-4.857,10.847-10.847V62.915C512,56.925,507.143,52.068,501.153,52.068z"
-          />
-        </g>
-      </g>
+      />
     </svg>
   </span>
 </label>
