--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,10 @@
-<header>
-  <input type="file" alt="image" (change)="handleChange($event)" />
-  <app-button (click)="goTest()">Конвертировать</app-button>
-  <app-checkbox [(value)]="isGrayScale" (valueChange)="goTest()">Grayscale</app-checkbox>
-  <app-checkbox [(value)]="isSpaced" (valueChange)="goTest()">Spaced</app-checkbox>
-  <app-palette [(palette)]="currentPalette" (paletteChange)="goTest()"></app-palette>
-  <div style="display: flex; font-size: 18px; align-items: center; justify-content: space-between; width: 180px">
-    Scale
-  <app-checkbox [(value)]="minecraft" (valueChange)="goTest()">minecraft on</app-checkbox>
-  <div class="incrementer-block">
-    <app-incrementer
-      [(value)]="this.scale"
-      [label]='"Scale"'
-      [step]="0.1"
-      [maxValue]="1"
-      [minValue]="0.1"
-      (valueChange)="goTest()"
-    ></app-incrementer>
+<main>
+  <header>
+    <h1>AxemaFr's APixel playground</h1>
+    <h2>Upload image and have fun!</h2>
+  </header>
+  <div>
+
   </div>
-  <div class="incrementer-block">
-    <app-incrementer
-      [(value)]="this.resultPixelSize"
-      [label]='"resultPixel"'
-      [step]="2"
-      [maxValue]="40"
-      [minValue]="4"
-      (valueChange)="goTest()"
-    ></app-incrementer>
-  </div>
-  <canvas #canvasElementFrom></canvas>
-  <canvas #canvasElementTo></canvas>
-</header>
+</main>
+
