--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -1,13 +1,11 @@
-header
+main
+  width: 100%
+  height: 100%
+  background: #85CDCA
   font-family: Pixel
-  width: auto
-  padding: 16px
+  display: flex
+  flex-direction: column
 
-  canvas
-    display block
-
-  app-button
-    display: inline-block
-
-  .incrementer-block
-    display: inline-block
+  header
+    width: 100%
+    height: 100%
