--- a/src/app/components/checkbox/checkbox.component.styl
+++ b/src/app/components/checkbox/checkbox.component.styl
@@ -13,14 +13,15 @@
   -moz-user-select none
   -ms-user-select none
   user-select none
+
   input
     position absolute
     opacity 0
     cursor pointer
     height 0
     width 0
-    &:checked
-      & ~ .checkmark .mark
+
+    &:checked ~ .checkmark .mark
         display block
 
 .checkmark
@@ -32,7 +33,8 @@
   right 0
   height 25px
   width 25px
-  background-color #eee
+  background-color #EEEEEE
+
   .mark
     display: none
 
