feat: switched to new design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 <main>
   <header>
     <h1>AxemaFr's APixel playground</h1>
-    <h2>Upload image and have fun!</h2>
+    <h2>Upload an image and have fun!</h2>
   </header>
-  <div>
+  <div class="playground">
+    <div class="playground__controls">
+      <app-button>Upload</app-button>
+      <app-checkbox>Grayscale</app-checkbox>
+      <app-incrementer>Size</app-incrementer>
+      <app-palette></app-palette>
+    </div>
+    <div class="playground__image">
+
+    </div>
 
   </div>
 </main>
