--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,8 +1,19 @@
 @font-face
   font-family Pixel
   font-style normal
-  src url(assets/fonts/BULKYPIX.TTF)
+  src url(assets/fonts/apple.ttf)
 
 html, body
   height: 100%
   width: 100%
+
+body
+  background-image: url("./assets/bg.gif");
+  background-size: cover;
+  background-position: center
+  display: flex
+  justify-content: center
+  align-items: flex-start
+
+p
+  margin: 0
