--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -1,11 +1,19 @@
-main
-  width: 100%
+:host
   height: 100%
-  background: #85CDCA
+
+main
+  max-width: 1300px
+  padding: 0 120px
+  height: 100%
   font-family: Pixel
   display: flex
   flex-direction: column
+  background-color: rgba(0,0,0,0.5);
 
   header
     width: 100%
-    height: 100%
+    text-align: center
+    color: #EEEEEE
+
+.playground
+  display: flex
