--- a/src/app/components/button/button.component.styl
+++ b/src/app/components/button/button.component.styl
@@ -1,8 +1,11 @@
 .ui-button
   button
     font-family Pixel
-    background: #FF9D0A;
-    border: 3px solid #000000;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 3px solid #EEEEEE;
+    font-size: 18px
+    color: #EEEEEE
+    user-select: none
     box-sizing: border-box;
-    padding: 13px 10px;
+    padding: 14px 12px;
     cursor: pointer;
