--- a/src/app/components/checkbox/checkbox.component.styl
+++ b/src/app/components/checkbox/checkbox.component.styl
@@ -2,24 +2,16 @@
   font-family: Pixel
   display flex
   position: relative
-  width: 250px
-  padding: 10px 12px
+  padding: 12px 12px
   cursor pointer
-  font-size 22px
-  margin-bottom: 10px;
-  background: #FF9D0A;
-  border: 3px solid #000000;
-  -webkit-user-select none
-  -moz-user-select none
-  -ms-user-select none
-  user-select none
+  font-size 17px
+  background: rgba(0, 0, 0, 0.1);
+  border: 3px solid #EEEEEE;
+  color: #EEEEEE
+  align-items: center
 
   input
-    position absolute
-    opacity 0
-    cursor pointer
-    height 0
-    width 0
+    display: none
 
     &:checked ~ .checkmark .mark
         display block
@@ -28,12 +20,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position absolute
-  margin-right: 10px;
-  right 0
   height 25px
   width 25px
   background-color #EEEEEE
+  margin-left: 12px
 
   .mark
     display: none
