--- a/src/app/components/palette/palette.component.styl
+++ b/src/app/components/palette/palette.component.styl
@@ -1,5 +1,4 @@
 .ui-palette
-  display: inline-block;
   &__buttons
     display: flex
     justify-content: center
@@ -8,30 +7,36 @@
     padding: 0 15px;
     height: 41px;
     width: 180px;
-    background: #FF9D0A;
-    border: 3px solid #000000;
-    & span
+    background: rgba(0, 0, 0, 0.1);
+    border: 3px solid #EEEEEE;
+    color: #EEEEEE
+
+    span
       margin-right: 14px
       font-size: 18px
-    & button
+    button
       height: 25px;
       width: 25px;
       border none
+      display: flex
       justify-content center
       align-items center
       outline none
       cursor: pointer
-  &__colors
+
+  &__colors-container
     display: flex;
     padding: 10px 8px;
-    background-color: #FF9D0A
-    border: 3px solid #000000
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 3px solid #EEEEEE
+
   &__color
     border: 1px solid #DFDFDF
     box-sizing: border-box
     width: 20px
     height: 20px
     margin-right: 4px;
+
   &__prev
     margin-right: 10px;
 
